rust/dbn-macros/tests/ui/csv_serialize_duplicate_encode_orders.stderr
error: Specified duplicate encode order `1` for field
  --> tests/ui/csv_serialize_duplicate_encode_orders.rs:9:5
   |
9  | /     #[dbn(encode_order(1))]
10 | |     pub c: u8,
   | |_____________^
